--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -17,11 +17,12 @@ All categories',''], ['organization','Team']], params[:type]), class: 'form-cont
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
-    <td>帐号</td>
-    <td>姓名</td>
+    <td>
+account number</td>
+    <td>Name</td>
     <td>Email</td>
-    <td>注册时间</td>
-    <td>操作</td>
+    <td>Registration time</td>
+    <td>Operating</td>
   </tr>
 
 <% @users.each do |user| %>
