--- a/app/views/users/_repos.html.erb
+++ b/app/views/users/_repos.html.erb
@@ -19,7 +19,7 @@
     </div>
   <% else %>
     <div class="panel-body">
-      未设置 GitHub 信息.
+      GitHub information is not set.
     </div>
   <% end %>
 </div>
