--- a/app/views/users/_reward.html.erb
+++ b/app/views/users/_reward.html.erb
@@ -5,7 +5,8 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <div class="message">
           <div class="user-info"><%= user_avatar_tag(@user, :md, link: false) %></div>
-          <p><i class="fa fa-quote-left pull-left"></i>如果觉得我的文章对您有用，请随意打赏。您的支持将鼓励我继续创作！<i class="fa fa-quote-right pull-right"></i></p>
+          <p><i class="fa fa-quote-left pull-left"></i>
+If you think my article is useful to you, please feel free to play. Your support will encourage me to continue to create!<i class="fa fa-quote-right pull-right"></i></p>
         </div>
       </div>
       <div class="modal-body clearfix">
