--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,9 +10,9 @@
 
     <div class="tabbable">
       <ul class="nav nav-tabs">
-        <li class="active"><a href="#topics" data-toggle="tab">热门话题</a></li>
-        <li><a href="#replies" data-toggle="tab">最近回帖</a></li>
-        <li><a href="#description" data-toggle="tab">个人介绍</a></li>
+        <li class="active"><a href="#topics" data-toggle="tab">Hot topic</a></li>
+        <li><a href="#replies" data-toggle="tab">Recently Replies</a></li>
+        <li><a href="#description" data-toggle="tab">Self introduction</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active recent-topics" id="topics">
@@ -25,7 +25,7 @@
                   <%= topic_title_tag(item) %> <%= topic_excellent_tag(item) %>
                 </div>
                 <div class="info">
-                  <span class="counter"><%= item.likes_count %> 个赞 • <%= item.replies_count %> 条回复</span>
+                  <span class="counter"><%= item.likes_count %> Praise <%= item.replies_count %> Reply</span>
                 </div>
               </li>
               <% end %>
