--- a/app/views/topics/_sidebar_for_topic_index.html.erb
+++ b/app/views/topics/_sidebar_for_topic_index.html.erb
@@ -1,6 +1,6 @@
 <% if current_user && current_user.newbie? %>
 <div class="panel panel-default">
-  <div class="panel-heading">新手必读</div>
+  <div class="panel-heading">Novice must read</div>
   <div class="panel-body">
     <%= raw Setting.newbie_notices %>
   </div>
@@ -21,9 +21,9 @@
 <div class="panel panel-default">
   <div class="panel-heading"><%= t("common.statics")%></div>
   <ul class="list-group">
-    <li class="list-group-item">社区会员: <%= User.unscoped.count %> 人</li>
-    <li class="list-group-item">帖子数: <%= Topic.unscoped.count %> 个</li>
-    <li class="list-group-item">回帖数: <%= Reply.unscoped.count %> 条</li>
+    <li class="list-group-item">Community members: <%= User.unscoped.count %> people</li>
+    <li class="list-group-item">Posts: <%= Topic.unscoped.count %> One</li>
+    <li class="list-group-item">Replies: <%= Reply.unscoped.count %> Article</li>
   </ul>
 </div>
 <% end %>
