--- a/app/views/topics/_sidebar_box_tips.html.erb
+++ b/app/views/topics/_sidebar_box_tips.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-  <div class="panel-heading">小帖士</div>
+  <div class="panel-heading">Small posts</div>
   <div class="panel-body">
     <%= random_tips %>
   </div>
