--- a/app/views/topics/_related_topics.html.erb
+++ b/app/views/topics/_related_topics.html.erb
@@ -1,7 +1,7 @@
 <% cache([@topic, 'related_topic', Date.current]) do %>
   <% if @topic.related_topics.present? %>
     <div class="panel panel-default">
-      <div class="panel-heading">相关话题</div>
+      <div class="panel-heading">Related topics</div>
       <ul class="list-group">
         <% @topic.related_topics.each do |topic| %>
           <li class="list-group-item"><%= link_to topic.title, topic %></li>
