--- a/app/views/topics/_node_selector.html.erb
+++ b/app/views/topics/_node_selector.html.erb
@@ -3,7 +3,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <strong>话题节点</strong>
+        <strong>Topic node</strong>
       </div>
       <div class="modal-body">
         <%= render '/shared/index_sections' %>
