--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -4,10 +4,10 @@
       <% if !node.blank? %>
         <div class="title">
           <%= node.name %>
-          <span class="total">共有 <%= node.topics_count %> 个讨论主题</span>
+          <span class="total">Altogether <%= node.topics_count %> Discussion topics</span>
           <div class="pull-right">
             <% if node.collapse_summary? %>
-            <a class="btn btn-default" data-toggle="collapse" href="#node-summary"><i class="fa fa-lightbulb-o"></i> 节点介绍</a>
+            <a class="btn btn-default" data-toggle="collapse" href="#node-summary"><i class="fa fa-lightbulb-o"></i> Node introduction</a>
             <% end %>
             <%= block_node_tag(node) %>
           </div>
@@ -18,18 +18,18 @@
       <% else %>
         <%= render 'node_selector' %>
         <ul class="filter nav nav-pills">
-          <li><a href="#" class="all-nodes" data-toggle="modal" data-target="#node-selector">所有节点 <span class="caret-right"></span></a></li>
+          <li><a href="#" class="all-nodes" data-toggle="modal" data-target="#node-selector">All nodes <span class="caret-right"></span></a></li>
           <li class="<%= ' active' if action_name == 'index' %>">
-            <a href="<%= main_app.topics_path %>" data-turbolinks-action="replace">默认</a>
+            <a href="<%= main_app.topics_path %>" data-turbolinks-action="replace">default</a>
           </li>
           <li class="<%= ' active' if action_name == 'popular' %>">
-            <a href="<%= main_app.popular_topics_path %>" data-turbolinks-action="replace"><i class="fa fa-diamond"></i> 优质帖子</a>
+            <a href="<%= main_app.popular_topics_path %>" data-turbolinks-action="replace"><i class="fa fa-diamond"></i>High quality post</a>
           </li>
           <li class="<%= ' active' if action_name == 'no_reply' %>">
-            <%= link_to('无人问津', main_app.no_reply_topics_path, data: { 'turbolinks-action': 'replace' }) %>
+            <%= link_to('Nobody cares', main_app.no_reply_topics_path, data: { 'turbolinks-action': 'replace' }) %>
           </li>
           <li class="<%= ' active' if action_name == 'recent' %>">
-            <%= link_to('最新发布', main_app.recent_topics_path, data: { 'turbolinks-action': 'replace' }) %>
+            <%= link_to('Latest release', main_app.recent_topics_path, data: { 'turbolinks-action': 'replace' }) %>
           </li>
         </ul>
       <% end %>
