--- a/app/views/topics/_buttons.html.erb
+++ b/app/views/topics/_buttons.html.erb
@@ -7,30 +7,30 @@
 
   <% if admin? %>
     <% if !@topic.suggested_at.blank? %>
-    <%= link_to raw("<i class='fa fa-angle-double-up'></i> 取消"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
+    <%= link_to raw("<i class='fa fa-angle-double-up'></i> cancel"), unsuggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% else %>
-    <%= link_to raw("<i class='fa fa-angle-double-up'></i> 置顶"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
+    <%= link_to raw("<i class='fa fa-angle-double-up'></i> Sticky"), suggest_admin_topic_path(@topic), method: :post, remote: true %>
     <% end %>
     <% if !@topic.excellent? %>
-    <%= link_to raw("<i class='fa fa-diamond'></i> 加精"), action_topic_path(@topic.id, type: 'excellent'), title: "设为精华帖" , method: "post", remote: true %>
+    <%= link_to raw("<i class='fa fa-diamond'></i> Add fine"), action_topic_path(@topic.id, type: 'excellent'), title: "Set as the essence of posts" , method: "post", remote: true %>
     <% end %>
 
     <% if @topic.node_id != Node.no_point.id %>
-      <%= link_to raw("<i class='fa fa-ban'></i> 屏蔽"), ban_topic_path(@topic), remote: true, title: "屏蔽此贴，移动到 NoPoint 节点" %>
+      <%= link_to raw("<i class='fa fa-ban'></i> shield"), ban_topic_path(@topic), remote: true, title: "Mask this sticker, move to NoPoint node" %>
     <% end %>
   <% end %>
   <span class="pull-right opts">
     <% if owner?(@topic) or admin? %>
     <% if can?(:close, @topic) %>
       <% if !@topic.closed? %>
-        <%= link_to raw("<i class='fa fa-check'></i>"), action_topic_path(@topic, type: 'close'), method: 'post', title: "关闭讨论／问题已解决", remote: true, data: { toggle: 'tooltip' } %>
+        <%= link_to raw("<i class='fa fa-check'></i>"), action_topic_path(@topic, type: 'close'), method: 'post', title: "Close discussion / issue resolved", remote: true, data: { toggle: 'tooltip' } %>
       <% else %>
-        <%= link_to raw("<i class='fa fa-undo'></i>"), action_topic_path(@topic, type: 'open'), method: 'post', title: "重新开启话题", remote: true, data: { toggle: 'tooltip' } %>
+        <%= link_to raw("<i class='fa fa-undo'></i>"), action_topic_path(@topic, type: 'open'), method: 'post', title: "Reopen the topic", remote: true, data: { toggle: 'tooltip' } %>
       <% end %>
     <% end %>
-    <%= link_to "", edit_topic_path(@topic), class: "fa fa-pencil", title: "修改本帖" %>
+    <%= link_to "", edit_topic_path(@topic), class: "fa fa-pencil", title: "Modify this post" %>
       <% if can?(:destroy, @topic) %>
-      <%= link_to "", topic_path(@topic.id), method: :delete, remote: true, 'data-confirm': t("common.confirm_delete"), class: "fa fa-trash", title: "删除本帖" %>
+      <%= link_to "", topic_path(@topic.id), method: :delete, remote: true, 'data-confirm': t("common.confirm_delete"), class: "fa fa-trash", title: "Delete this post" %>
       <% end %>
     <% end %>
   </span>
