--- a/app/views/topics/_ban_reason.html.erb
+++ b/app/views/topics/_ban_reason.html.erb
@@ -1,6 +1,6 @@
 <% if @topic.node_id == Node.no_point.id %>
 <div class="alert alert-warning alert-block">
-  <h5 class="title">此贴已暂时被屏蔽!</h5>
+  <h5 class="title">This post has been temporarily blocked!</h5>
   <div class="markdown">
     <%= markdown @topic.node.summary %>
   </div>
