--- a/app/views/topics/translation/_need_login_to_reply.zh-CN.html.erb
+++ b/app/views/topics/translation/_need_login_to_reply.zh-CN.html.erb
@@ -1,5 +1,5 @@
 <div id="reply" class="form box">
   <div style="padding:20px;" data-turbolinks-action="replace">
-    需要 <%= link_to(t("common.login"), "/account/sign_in", class: "btn btn-primary")%> You can reply, if you have no account please click here <%= link_to("#{t("common.register")}", "/account/sign_up", class: "btn btn-danger")%>。
+    need <%= link_to(t("common.login"), "/account/sign_in", class: "btn btn-primary")%> You can reply, if you have no account please click here <%= link_to("#{t("common.register")}", "/account/sign_up", class: "btn btn-danger")%>。
   </div>
 </div>
