--- a/app/views/topic_mailer/new_reply.html.erb
+++ b/app/views/topic_mailer/new_reply.html.erb
@@ -1,10 +1,10 @@
 <h1>你关注的帖子有了新回复</h1>
 <p>
-   <%= user_name_tag(@reply.user) %>  回复了 《<%= topic_title_tag(@topic)%>》:</label> <br />
+   <%= user_name_tag(@reply.user) %>  Replied 《<%= topic_title_tag(@topic)%>》:</label> <br />
 </p>
 <blockquote>
   <p><%= @reply.body_html %><br/></p>
 </blockquote>
 <p>
- <label> 帖子地址:</label> <%= topic_title_tag(@topic) %>.
+ <label> Posts Address:</label> <%= topic_title_tag(@topic) %>.
 </p>
