--- a/app/views/topic_mailer/new_reply.html.erb
+++ b/app/views/topic_mailer/new_reply.html.erb
@@ -1,4 +1,4 @@
-<h1>你关注的帖子有了新回复</h1>
+<h1>You have a new reply to your posts</h1>
 <p>
    <%= user_name_tag(@reply.user) %>  Replied 《<%= topic_title_tag(@topic)%>》:</label> <br />
 </p>
