--- a/app/views/teams/_sidebar.html.erb
+++ b/app/views/teams/_sidebar.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     </div>
     <div class="panel-footer">
-      <%= link_to '所有成员...', user_team_users_path(@team) %>
+      <%= link_to 'All members ...', user_team_users_path(@team) %>
     </div>
   </div>
 
