--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -60,10 +60,10 @@
     <div class="panel">
       <div class="panel-heading"><%= t('teams.teams')%></div>
       <ul class="list-group">
-        <li class="list-group-item">公司／组织品牌展示；</li>
-        <li class="list-group-item">独立的组织首页；</li>
-        <li class="list-group-item">汇集成员在社区里面的话题；</li>
-        <li class="list-group-item">为团队招揽人才；</li>
+        <li class="list-group-item">Company / organization brand display;</li>
+        <li class="list-group-item">Independent organization home page;</li>
+        <li class="list-group-item">Pool members in the community inside the topic;</li>
+        <li class="list-group-item">For the team to recruit talent;</li>
       </ul>
     </div>
   </div>
