--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -17,7 +17,7 @@
           </div>
 
           <div class="form-group">
-            如你发现你的公司或团队名称被抢注，可以尝试联系管理员，我们可以尽可能的协调。
+           If you find your company or team name registered, you can try to contact the administrator, we can be as coordinated as possible.
           </div>
         <% end %>
 
@@ -28,10 +28,10 @@
     <div class="panel">
       <div class="panel-heading"><%= t('teams.teams')%></div>
       <ul class="list-group">
-        <li class="list-group-item">公司／组织品牌展示；</li>
-        <li class="list-group-item">独立的组织首页；</li>
-        <li class="list-group-item">汇集成员在社区里面的话题；</li>
-        <li class="list-group-item">为团队招揽人才；</li>
+        <li class="list-group-item">Company / organization brand display;</li>
+        <li class="list-group-item">Independent organization home page;</li>
+        <li class="list-group-item">Pool members in the community inside the topic;</li>
+        <li class="list-group-item">For the team to recruit talent;</li>
       </ul>
     </div>
   </div>
