--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -5,7 +5,7 @@
     <div class="panel topics">
       <div class="panel-body">
         <% if @topics.blank? %>
-        <div class="topic"><div class="no-result">暂无任何话题</div></div>
+        <div class="topic"><div class="no-result">No topic yet</div></div>
         <% else %>
         <%= render partial: '/topics/topic', collection: @topics, locals: { suggest: false }, cached: -> (topic) { [topic, 'normal'] } %>
         <% end %>
