--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -4,7 +4,7 @@ new_comment = Comment.new(commentable_type: commentable.class.name, commentable_
 %>
 
 <div id="<%= commentable.class.name %>_<%= commentable.id %>_cell_comments" class="comments panel panel-default">
-  <div class="panel-heading">评论列表</div>
+  <div class="panel-heading">comment list</div>
   <div class="panel-body">
     <% if !comments.blank? %>
     <%= render :partial => "/shared/comment", :collection => comments %>
@@ -16,7 +16,7 @@ new_comment = Comment.new(commentable_type: commentable.class.name, commentable_
 
 <% if @current_user %>
   <div id="<%= commentable.class.name %>_<%= commentable.id %>_cell_new_comment" class="cell_comments_new panel panel-default">
-    <div class="panel-heading">发表新评论</div>
+    <div class="panel-heading">Post new comment</div>
     <%= form_with(model: new_comment, remote: true, html: { class: "panel-body" }) do |f| %>
       <%= f.hidden_field :commentable_type %>
       <%= f.hidden_field :commentable_id %>
