--- a/app/views/shared/_editor_toolbar.html.erb
+++ b/app/views/shared/_editor_toolbar.html.erb
@@ -16,7 +16,7 @@
     <li class="preview"><%= link_to(t("common.editor_toolbar_preview"), "#") %></li>
     <li>
       <div class="nav reply-to" style="display:none;">
-        <i class="fa fa-mail-reply" title="回复"></i>
+        <i class="fa fa-mail-reply" title="Reply"></i>
         <a href="#" class="user"></a>
         <a href="#" class="close"><i class="fa fa-close"></i></a>
       </div>
