--- a/app/views/settings/password.html.erb
+++ b/app/views/settings/password.html.erb
@@ -2,7 +2,7 @@
   <%= render 'menu' %>
 
   <div class="col-md-8">
-    <div class="alert alert-warning">注意！更新密码以后需要重新登陆。</div>
+    <div class="alert alert-warning">note! You will need to log in again after updating your password.</div>
 
     <div class="panel panel-default">
       <div class="panel-body">
