--- a/app/views/settings/reward.html.erb
+++ b/app/views/settings/reward.html.erb
@@ -16,9 +16,9 @@
                 <input class="form-control" type="file" name="user[rewards][<%= field %>]" id="user_reward_<%= field %>">
                 <p class="help-block">
                   <% if field == :alipay %>
-                  打开支付宝客户端：右上角 “+” -> 我要收款 -> 设定金额 -> 保存二维码图片
+                 Open Alipay client: the upper right corner "+" -> I want to collect -> set the amount -> save two-dimensional code picture
                   <% elsif field == :wechat %>
-                  打开微信手机客户端：右上角 “+” -> 收付款 -> 我要收款 -> 保存二维码图片
+                  Open the WeChat mobile client: the upper right corner "+" -> payment -> I want to collect -> save two-dimensional code picture
                   <% end %>
                 </p>
               </div>
@@ -41,9 +41,9 @@
             <div class="markdown">
               <%= markdown("### :gift: 关于打赏\n\n
 
-              打赏功能为了鼓励分享而设计。
+             The reward function is designed to encourage sharing.
 
-              上传你的微信、支付宝 **收款二维码**，之后打赏按钮将会出现在 “个人主页” 和 “文章末尾” 显示。
+              Upload your micro letter, pay treasure ** receive two-dimensional code **, after the play button will appear in the "personal home" and "article at the end" show.
               ") %>
             </div>
           </div>
