--- a/app/views/search/_user.html.erb
+++ b/app/views/search/_user.html.erb
@@ -14,10 +14,10 @@
       <div class="info number">
         第 <%= item.id %> 位<%= t("menu.users")%>
          •
-        <span title="注册日期"><%= item.created_at.to_date %></span>
+        <span title="Registration date"><%= item.created_at.to_date %></span>
         <% if item.location.present? %> • <span title="所在地"><%= location_name_tag(item.location) %></span><% end %>
          •
-        <span><%= item.topics_count %></span> 篇帖子 • <span><%= item.replies_count %></span> 条回帖
+        <span><%= item.topics_count %></span> Posts • <span><%= item.replies_count %></span> Replies
       </div>
     </div>
   </div>
