--- a/app/views/replies/system_events/_ban.html.erb
+++ b/app/views/replies/system_events/_ban.html.erb
@@ -1,5 +1,5 @@
 <% if reply.body.present? %>
-屏蔽了此话题：<span class="ban-reason"><%= reply.body %></span>
+Shielding this topic：<span class="ban-reason"><%= reply.body %></span>
 <% else %>
-内容不符合版规屏蔽此话题
+Content does not conform to the version of this topic
 <% end %>
