--- a/app/views/replies/system_events/_mention.html.erb
+++ b/app/views/replies/system_events/_mention.html.erb
@@ -1,8 +1,8 @@
-在
+in
 <span class='topic'>
 <% if reply.target_type == "Topic" %>
   <%= topic_title_tag(reply&.target) %>
 <% else %>
   <%= topic_title_tag(reply&.target&.topic) %>
 <% end %>
-</span> 中提及了此贴
+</span>Mentioned in this paste
