--- a/app/views/replies/_reply_to.html.erb
+++ b/app/views/replies/_reply_to.html.erb
@@ -14,7 +14,7 @@
           <span class='reply-floor'></span>
         <% end %>
       <% end %>
-      回复
+      Reply
     </div>
     <% if show_body %>
     <div class="markdown">
