--- a/app/views/replies/edit.html.erb
+++ b/app/views/replies/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="edit-reply panel panel-default">
   <div class="panel-heading">
-    修改回帖 <span class="pull-right"><%= topic_title_tag(@topic) %></span>
+    Modify the replies <span class="pull-right"><%= topic_title_tag(@topic) %></span>
   </div>
   <div class="panel-body">
     <%= simple_form_for([@topic, @reply], remote: true, html: { class: "", tb: 'edit-reply' }) do |f| %>
@@ -14,7 +14,7 @@
       <div class="form-group">
         <%= f.submit t("common.save"), class: "btn btn-primary col-xs-2 hide-ios", 'data-disable-with' => t("common.saving") %>
         <% if can? :destroy, @reply %>
-        <%= link_to "删除",[@topic,@reply], class: "pull-right btn btn-danger", method: :delete, data: { confirm: "确定要删除此回复么？" } %>
+        <%= link_to "delete",[@topic,@reply], class: "pull-right btn btn-danger", method: :delete, data: { confirm: "Are you sure you want to delete this reply?？" } %>
         <% end %>
       </div>
     <% end %>
