--- a/app/views/notifications/mentions/_comment.html.erb
+++ b/app/views/notifications/mentions/_comment.html.erb
@@ -4,14 +4,14 @@
 %>
 
 <% if second_target.blank? %>
-  <div class="media-body">相关信息已删除</div>
+  <div class="media-body">Related information has been deleted</div>
 <% else %>
   <%
   case notification.second_target_type
   when "Post" %>
     <% if Setting.has_module? :press %>
     <div class="media-heading">
-      在 <a href="<%= homeland_press.post_path(second_target) %>"><%= second_target.title %></a> 的评论中提及你：
+      in <a href="<%= homeland_press.post_path(second_target) %>"><%= second_target.title %></a> Of the comments mentioned in you：
     </div>
     <div class="media-content summary markdown">
       <%= comment.body_html %>
@@ -20,7 +20,7 @@
   <% when "Page" %>
     <% if Setting.has_module? :wiki %>
     <div class="media-heading">
-      在 <a href="<%= homeland_wiki.page_path(second_target) %>"><%= second_target.title %></a> 的评论中提及你：
+     in <a href="<%= homeland_wiki.page_path(second_target) %>"><%= second_target.title %></a> Of the comments mentioned in you：
     </div>
     <div class="media-content summary markdown">
       <%= comment.body_html %>
