--- a/app/views/notifications/mentions/_reply.html.erb
+++ b/app/views/notifications/mentions/_reply.html.erb
@@ -3,7 +3,7 @@
   topic = notification.second_target || reply.topic
 %>
 <div class="media-heading">
-  <span class="info">在 <%= topic_title_tag(topic) %> 提及你：</span>
+  <span class="info">in <%= topic_title_tag(topic) %>Mention you：</span>
 </div>
 <% if reply.present? %>
   <div class="media-content summary markdown">
