--- a/app/views/notifications/_follow.html.erb
+++ b/app/views/notifications/_follow.html.erb
@@ -1,8 +1,8 @@
 <% user = notification.actor %>
 <% if user.blank? %>
-  相关信息已删除
+ Related information has been deleted
 <% else %>
   <div class="media-heading">
-    <%= user_name_tag(user) %> 开始关注你了。
+    <%= user_name_tag(user) %> Began to pay attention to you.
   </div>
 <% end %>
