--- a/app/views/notifications/_node_changed.html.erb
+++ b/app/views/notifications/_node_changed.html.erb
@@ -6,6 +6,6 @@
   Related information has been deleted
 <% else %>
   <div class="media-heading">
-    You post the topic <%= topic_title_tag(topic) %>It was moved by the administrator for content reasons <%= render_node_name(node.name, node.id) %> 节点，请注意查看节点说明。
+    You post the topic <%= topic_title_tag(topic) %>It was moved by the administrator for content reasons <%= render_node_name(node.name, node.id) %> Node, please note the node description.
   </div>
 <% end %>
