--- a/app/views/notifications/_topic.html.erb
+++ b/app/views/notifications/_topic.html.erb
@@ -1,8 +1,8 @@
 <% topic = notification.target %>
 <% if topic.blank? %>
-  相关信息已删除
+  Related information has been deleted
 <% else %>
   <div class="media-heading">
-    创建了帖子 <%= topic_title_tag(topic) %>
+    Created a post <%= topic_title_tag(topic) %>
   </div>
 <% end %>
