--- a/app/views/notifications/_topic_reply.html.erb
+++ b/app/views/notifications/_topic_reply.html.erb
@@ -1,14 +1,14 @@
 <% reply = notification.target %>
 <% if reply.blank? %>
-  <div class="media-body">相关信息已删除</div>
+  <div class="media-body">Related information has been deleted</div>
 <% else %>
   <%
     topic = notification.second_target || reply.topic
   %>
 
   <div class="media-heading">
-    在帖子
-    <%= topic_title_tag(topic, reply: reply) %> 回复了：
+    In the post
+    <%= topic_title_tag(topic, reply: reply) %>Replied：
   </div>
   <%- if reply.present? -%>
     <div class="media-content summary markdown">
