--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,5 +1,5 @@
 <% if @success %>
-  $("#<%= @element_id %>").attr("class","icon small_liked").data("method","delete").attr("title", "取消赞");
+  $("#<%= @element_id %>").attr("class","icon small_liked").data("method","delete").attr("title", "Dislike");
 <% else %>
-  App.alert("提交失败.")
+  App.alert("Submission Failed.")
 <% end %>
