--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= Setting.app_name %> - 控制台</title>
+  <title><%= Setting.app_name %> - The console</title>
   <%= stylesheet_link_tag "admin" %>
   <%= javascript_include_tag "app" %>
   <%= csrf_meta_tag %>
@@ -16,7 +16,7 @@
             <span class="sr-only">Toggle</span>
             <i class="fa fa-reorder"></i>
           </button>
-          <%= link_to("控制台", main_app.admin_root_path, class: "navbar-brand") %>
+          <%= link_to("The console", main_app.admin_root_path, class: "navbar-brand") %>
         </div>
         <nav class="collapse navbar-collapse" id="main-navbar-collapse">
           <%= render_list class: "nav navbar-nav" do |li|
@@ -43,7 +43,7 @@
 
   <div class="main-container container">
     <div class="breadcrumb">
-      <a href="<%= main_app.admin_root_path %>">控制台</a> <i class="fa fa-angle-right"></i>
+      <a href="<%= main_app.admin_root_path %>">The console</a> <i class="fa fa-angle-right"></i>
       <%= yield :sitemap %>
     </div>
     <div id="main" class="panel panel-default">
@@ -56,7 +56,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="suggest">使用 <a href="http://www.mozillaonline.com/" target="_blank" rel="nofollow">Firefox</a> 或 <a href="http://www.google.com/chrome" target="_blank" rel="nofollow">Chrome</a> 浏览访问本站将会获得更佳的视觉体验.</p>
+      <p class="suggest">use <a href="http://www.mozillaonline.com/" target="_blank" rel="nofollow">Firefox</a>or <a href="http://www.google.com/chrome" target="_blank" rel="nofollow">Chrome</a> Visit the site will get a better visual experience.</p>
     </div>
   </footer>
 </body>
