--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%= raw Setting.index_html %>
 
 <div class="home_suggest_topics panel panel-default">
-  <div class="panel-heading">社区精华帖</div>
+  <div class="panel-heading">Community Essentials</div>
   <div class="panel-body topics row">
     <% cache(["home_suggest_topics", @excellent_topics]) do %>
     <%
@@ -17,7 +17,7 @@
     <% end %>
   </div>
   <div class="panel-footer">
-    <%= link_to "查看更多精华帖...", excellent_topics_path %>
+    <%= link_to "See more highlights ...", excellent_topics_path %>
   </div>
 </div>
 
