--- a/app/views/errors/403.html.erb
+++ b/app/views/errors/403.html.erb
@@ -1,10 +1,10 @@
 <% content_for :sitemap do %><span class="current">404</span><% end %>
 <div id="error-page" class="box">
-  <h1>403 没有权限</h1>
+  <h1>403Permission denied</h1>
   <p>
-    抱歉，你没有做此操作的权限，如有问题，请到社区发帖询问。
+   Sorry, you do not have permission to do this operation, if any questions, please go to the community post to ask.
   </p>
   <p>
-    <a href="/" class="btn">返回首页</a>
+    <a href="/" class="btn">Return to the home page</a>
   </p>
 </div>
