--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -2,7 +2,7 @@
   <div class="panel-body">
     <h1>Oops, Page not found</h1>
     <p>
-      似乎没有这个页面哦！大哥，回去看看别的吧。
+     Does not seem to have this page! Big Brother, go back and see other things
     </p>
   </div>
 </div>
