--- a/app/views/doorkeeper/applications/_form.html.erb
+++ b/app/views/doorkeeper/applications/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <% if application.new_record? %>注册新应用<% else %>修改应用信息<% end %>
+    <% if application.new_record? %>Register a new application<% else %>Modify the application information<% end %>
   </div>
   <div class="panel-body">
     <%= form_with(model: application, url: doorkeeper_submit_path(application), html: { role: 'form'}) do |f| %>
@@ -29,8 +29,8 @@
       <% end %>
 
       <div class="form-group">
-        <%= f.submit "提交", class: "btn btn-primary" %>
-        <%= link_to "取消", oauth_applications_path, :class => "btn btn-default" %>
+        <%= f.submit "submit", class: "btn btn-primary" %>
+        <%= link_to "cancel", oauth_applications_path, :class => "btn btn-default" %>
       </div>
     <% end %>
   </div>
