--- a/app/views/doorkeeper/applications/_menu.html.erb
+++ b/app/views/doorkeeper/applications/_menu.html.erb
@@ -1,3 +1,3 @@
 <ol class="breadcrumb">
-  <li><%= link_to "应用列表", oauth_applications_path %></li>
+  <li><%= link_to "Application list", oauth_applications_path %></li>
 </ol>
