--- a/app/views/doorkeeper/applications/index.html.erb
+++ b/app/views/doorkeeper/applications/index.html.erb
@@ -3,8 +3,8 @@
   <div class="col-md-8">
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
-        管理的应用列表
-        <%= link_to "注册新应用", new_oauth_application_path, class: 'btn btn-success pull-right' %>
+        Managed list of applications
+        <%= link_to "Register a new application", new_oauth_application_path, class: 'btn btn-success pull-right' %>
       </div>
 
       <div class="panel-body">
@@ -14,7 +14,7 @@
             <th><%= t('.name') %></th>
             <th>Client Id</th>
             <th>Level</th>
-            <th>用户量</th>
+            <th>User volume</th>
             <th></th>
           </tr>
           </thead>
@@ -27,7 +27,7 @@
               <td><%= app.access_tokens.count %></td>
               <td class="opts">
                 <%= link_to icon_tag('pencil'), edit_oauth_application_path(app)%>
-                <%= link_to icon_tag('trash'), oauth_application_path(app), data: { method: :delete, confirm: "确定要删除么？" }%>
+                <%= link_to icon_tag('trash'), oauth_application_path(app), data: { method: :delete, confirm: "Are you sure you want to delete?" }%>
             </td>
             </tr>
           <% end %>
@@ -38,11 +38,11 @@
 
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
-        已授权的应用
+       Authorized applications
       </div>
 
       <div class="panel-body">
-        <p>下面列表是已经认证的应用，它们可以访问你的帐号。</p>
+        <p>The following list is already a certified application, they can access your account.</p>
         <table class="table table-bordered table-striped table-condensed">
           <thead>
           <tr>
@@ -57,7 +57,7 @@
               <td><%= app.name %></td>
               <td><%= app.created_at.strftime(t('doorkeeper.authorized_applications.index.date_format')) %></td>
               <td>
-                <%= link_to "注销", oauth_authorized_application_path(app), class: "btn btn-warning btn-xs", data: { confirm: "确定要注销么？", method: :delete } %>
+                <%= link_to "Write off", oauth_authorized_application_path(app), class: "btn btn-warning btn-xs", data: { confirm: "Are you sure you want to log out?", method: :delete } %>
               </td>
             </tr>
           <% end %>
@@ -69,11 +69,11 @@
     <% if @devices.length > 0 %>
     <div class="panel panel-default">
       <div class="panel-heading clearfix">
-        我的设备信息
+        My device information
       </div>
 
       <div class="panel-body">
-        <p>下面列表是已经连接上的设备，它们将会收到 Push 通知。</p>
+        <p>The following list is already connected to the device, they will receive Push notification.</p>
         <table class="table table-bordered table-striped table-condensed">
           <thead>
           <tr>
@@ -89,7 +89,7 @@
               <td><%= device.platform_name %></td>
               <td><%= device.token %></td>
               <td><%= device.alive? %></td>
-              <td><%= link_to '删除', device, class: 'btn btn-warning btn-xs', data: { confirm: '确定要删除么？', method: :delete } %></td>
+              <td><%= link_to 'delete', device, class: 'btn btn-warning btn-xs', data: { confirm: 'Are you sure you want to delete?', method: :delete } %></td>
             </tr>
           <% end %>
           </tbody>
