--- a/app/views/doorkeeper/applications/show.html.erb
+++ b/app/views/doorkeeper/applications/show.html.erb
@@ -34,7 +34,7 @@
     </table>
   </div>
   <div class="panel-footer">
-    <%= link_to "修改应用信息", edit_oauth_application_path(@application), class: 'btn btn-primary' %>
-    <%= link_to "删除应用", oauth_application_path(@application), class: "btn btn-danger pull-right", data: { method: :delete, confirm: "确定要删除么？" } %>
+    <%= link_to "Modify the application information", edit_oauth_application_path(@application), class: 'btn btn-primary' %>
+    <%= link_to "Delete the application", oauth_application_path(@application), class: "btn btn-danger pull-right", data: { method: :delete, confirm: "Are you sure you want to delete?" } %>
   </div>
 </div>
