--- a/app/views/doorkeeper/authorizations/new.html.erb
+++ b/app/views/doorkeeper/authorizations/new.html.erb
@@ -5,7 +5,7 @@
   
       <div class="panel-body">
         <p>
-          应用 <strong class="text-danger"><%= @pre_auth.client.name %></strong> 希望你授权使用你的帐号
+         application <strong class="text-danger"><%= @pre_auth.client.name %></strong> I hope you are authorized to use your account
         </p>
     
         <% if @pre_auth.scopes %>
