--- a/app/views/doorkeeper/authorizations/show.html.erb
+++ b/app/views/doorkeeper/authorizations/show.html.erb
@@ -1,10 +1,10 @@
 <div class="row" style="padding: 50px 0;">
   <div class="col-md-6 col-md-offset-3">
     <div class="panel panel-default">
-      <div class="panel-heading">授权成功</div>
+      <div class="panel-heading">Authorized success</div>
   
       <div class="panel-body">
-        <p>由于应用没有配置回调地址，请使用授权码：</p>
+        <p>Since the application does not have a callback address, use the authorization code：</p>
         <p class="text-info"><%= params[:code] %></p>
       </div>
     </div>
