--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,6 +1,6 @@
-<p class="lead">欢迎 <%= @resource.fullname %></p>
-<p>你已经成功注册 <%= link_to Setting.app_name, root_url %> 的账号，
-  接下来你需要点击下面的连接 <span class="text-danger">激活</span> 你的账号：</p>
-<p><%= link_to '激活账号', confirmation_url(@resource, confirmation_token: @token), class: 'btn' %></p>
-<p>如果看不到链接，请复制下面的连接然后在浏览器里面打开：</p>
+<p class="lead">welcome <%= @resource.fullname %></p>
+<p>You have successfully registered<%= link_to Setting.app_name, root_url %> The account number，
+  Next you need to click on the following link <span class="text-danger">activation</span> Your account number：</p>
+<p><%= link_to 'Activate the account', confirmation_url(@resource, confirmation_token: @token), class: 'btn' %></p>
+<p>If you do not see the link, copy the following link and open it inside the browser：</p>
 <p><%= confirmation_url(@resource, confirmation_token: @token) %></p>
