--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,7 @@
-<p class='lead'>你好 <%= @resource.fullname %></p>
+<p class='lead'>Hello there <%= @resource.fullname %></p>
 
-<p>由于多次错误密码尝试登录，你的帐号已经暂时被锁定了，锁定时间为 1 小时，锁定期间此帐号将无法登录，也无法尝试密码。</p>
+<p>Due to multiple attempts to log the wrong password, your account has been temporarily locked, the lock time is 1 hour, locked during this account will not be able to log in, can not try the password.</p>
 
-<p>你也可以点击下面的链接立即解锁:</p>
+<p>You can also click on the link below to unlock now:</p>
 
-<p><%= link_to '解锁我的帐号', unlock_url(@resource, unlock_token: @token), class: 'btn' %></p>
+<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token), class: 'btn' %></p>
