--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-你好 <strong><a href="<%= user_path(current_user.login)%>"><%= current_user.login %></a></strong>,
+Hello there <strong><a href="<%= user_path(current_user.login)%>"><%= current_user.login %></a></strong>,
 <% if not params[:controller].match(/admin/) %>
-  <%= link_to('设置', setting_path) %> |
-  <% if admin? current_user %><a href="/admin">后台</a> | <% end %>
+  <%= link_to('Set up', setting_path) %> |
+  <% if admin? current_user %><a href="/admin">Backstage</a> | <% end %>
 <% end %>
 <% else %>
-  <%= link_to('加入社区', new_user_registration_path)  %>
+  <%= link_to('Join the community', new_user_registration_path)  %>
 <% end %>
