--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -9,7 +9,7 @@
         <%= render "shared/error_messages", target: resource %>
         <div class="form-group">
           <%= f.text_field :email, type: :email, class: "form-control input-lg", placeholder: t("activerecord.attributes.user.email") %>
-          <p class="help-block">此功能将会发送一个找回密码的特别链接到你的邮箱，通过改链接可以进入重置密码的页面。</p>
+          <p class="help-block">This feature will send a special link to retrieve the password to your mailbox, by changing the link to enter the reset password page.</p>
         </div>
         <div class="form-group">
           <div class="input-group">
@@ -19,7 +19,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.submit "找回密码", class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
+          <%= f.submit "Retrieve the password", class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
         </div>
         <% end %>
       </div>
