--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,9 +1,9 @@
-<% title_tag '重新发送解锁邮件' %>
+<% title_tag 'Resend the unlock message' %>
 
 <div class="row">
   <div class="col-md-6 col-sm-offset-3">
     <div class="panel">
-      <div class="panel-heading">重新发送解锁邮件</div>
+      <div class="panel-heading">Resend the unlock message</div>
       <div class="panel-body">
         <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
           <%= devise_error_messages! %>
@@ -11,7 +11,7 @@
           <%= f.input :email, hint: '' %>
 
           <div class="form-group">
-            <%= f.submit "重新发送解锁邮件", class: 'btn btn-primary' %>
+            <%= f.submit "Resend the unlock message", class: 'btn btn-primary' %>
           </div>
         <% end %>
       </div>
