--- a/app/views/admin/applications/edit.html.erb
+++ b/app/views/admin/applications/edit.html.erb
@@ -1,5 +1,5 @@
 <% content_for :sitemap do %>
-  <a href="<%= admin_applications_path %>">OAuth 应用</a> <i class="fa fa-angle-right"></i> <span class="current">编辑</span>
+  <a href="<%= admin_applications_path %>">OAuth application</a> <i class="fa fa-angle-right"></i> <span class="current">edit</span>
 <% end %>
 
 <%= simple_form_for([:admin, @application], url: admin_application_path(@application)) do |f| %>
@@ -9,10 +9,10 @@
     <%= f.input :level %>
 
     <div class="form-actions">
-      <%= f.submit "保存", class: "btn btn-primary", 'data-disable-with' => "Saving..." %>
-      <%= link_to '取消', admin_applications_path, class: "btn" %>
+      <%= f.submit "save", class: "btn btn-primary", 'data-disable-with' => "Saving..." %>
+      <%= link_to 'cancel', admin_applications_path, class: "btn" %>
       <span class="pull-right">
-        <%= link_to "删除", admin_application_path(@application.id), class: 'btn btn-danger', method: :delete, 'data-confirm' => '确定要删除吗?' %>
+        <%= link_to "delete", admin_application_path(@application.id), class: 'btn btn-danger', method: :delete, 'data-confirm' => 'You sure you want to delete it?' %>
       </span>
     </div>
 <% end %>
