--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -4,9 +4,9 @@
 
 <table class='grid table-bordered table-striped table-condensed'>
   <tr>
-    <td style="width:100px">被评论对象</th>
-    <th>评论人</th>
-    <th>内容</th>
+    <td style="width:100px">Be commented on</th>
+    <th>Commentator</th>
+    <th>content</th>
     <td style="width:120px;">At</td>
     <td style="width:60px;"></td>
   </tr>
