--- a/app/views/admin/home/index.html.erb
+++ b/app/views/admin/home/index.html.erb
@@ -6,9 +6,9 @@
 <div class="toolbar">
   <div class="btn-group">
     <a href="/admin/site_configs" class="btn btn-default"><i class="fa fa-cogs"></i> <%= t("admin.site_configs.settings") %></a>
-    <a href="/admin/applications" class="btn btn-default"><i class="fa fa-cubes"></i> 三方应用</a>
-    <a href="/sidekiq" class="btn btn-default" target="_blank"><i class="fa fa-tasks"></i> 异步任务...</a>
-    <a href="/pghero" class="btn btn-default" target="_blank"><i class="fa fa-database"></i> 数据库状态...</a>
+    <a href="/admin/applications" class="btn btn-default"><i class="fa fa-cubes"></i> Tripartite application</a>
+    <a href="/sidekiq" class="btn btn-default" target="_blank"><i class="fa fa-tasks"></i>Asynchronous task ...</a>
+    <a href="/pghero" class="btn btn-default" target="_blank"><i class="fa fa-database"></i> Database status ...</a>
     <a href="/exception-track" class="btn btn-default" target="_blank"><i class="fa fa-warning"></i> <%= t("admin.menu.exception_logs") %>...</a>
   </div>
 </div>
@@ -19,9 +19,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          用户总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          The total number of users
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
@@ -30,9 +30,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          话题总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          Total number of topics
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
@@ -41,9 +41,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          回帖总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          Total number of replies
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
@@ -53,9 +53,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          通知总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          Total number of notifications
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
@@ -64,9 +64,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          评论总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          Total number of reviews
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
@@ -76,9 +76,9 @@
       <div class="stat">
         <div class="total">0</div>
         <div class="name">
-          照片总数
-          <span class="total-week" rel="twipsy" title="本周新增">+0</span>
-          <span class="total-month" rel="twipsy" title="本月新增">+0</span>
+          The total number of photos
+          <span class="total-week" rel="twipsy" title="Added this week">+0</span>
+          <span class="total-month" rel="twipsy" title="Added this month">+0</span>
         </div>
       </div>
     </div>
