--- a/app/views/admin/nodes/index.html.erb
+++ b/app/views/admin/nodes/index.html.erb
@@ -3,16 +3,16 @@
 <% end %>
 
 <div class="toolbar">
-  <%= link_to '新建节点', new_admin_node_path, class: "btn btn-default" %>
+  <%= link_to 'New node', new_admin_node_path, class: "btn btn-default" %>
 </div>
 
 <table class="table table-bordered table-striped table-condensed">
   <tr class="head">
     <td class="first">#</td>
     <td>Name</td>
-    <td>分类</td>
-    <td>排序</td>
-    <td>帖子数量</td>
+    <td>classification</td>
+    <td>Sorting</td>
+    <td>Number of posts</td>
     <td></td>
   </tr>
 
