--- a/app/views/home/markdown.html.erb
+++ b/app/views/home/markdown.html.erb
@@ -3,7 +3,7 @@
 <% cache(['markdown-guide', Digest::MD5.hexdigest(Homeland::Markdown.example)]) do %>
 <div class="panel markdown panel-default">
   <div class="panel-body">
-    <h1>Markdown 教程</h1>
+    <h1>MarkdownTutorial</h1>
     <div class="row">
       <div class="col-md-6">
         <pre><code><%= Homeland::Markdown.example %></code></pre>
